<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.0.0-M4</version>
	</parent>
	<groupId>com.hackathon</groupId>
	<artifactId>hn-service</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<name>hn-service</name>
	<description>POC project for Spring Boot</description>
	<properties>
		<java.version>19</java.version>
		<maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
		<tomcat.version>10.1.0-M17</tomcat.version>
		<native-buildtools.version>0.9.11</native-buildtools.version>
		<repackage.classifier>exec</repackage.classifier>
	</properties>


	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>io.micrometer</groupId>
			<artifactId>micrometer-registry-prometheus</artifactId>
		</dependency>
	</dependencies>


	<build>
		<plugins>
			<plugin>
				<groupId>org.graalvm.buildtools</groupId>
				<artifactId>native-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<compilerArgs>
						<arg>--enable-preview</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>--enable-preview</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<jvmArguments>--enable-preview</jvmArguments>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>spring-libs-milestone</id>
			<url>https://repo.spring.io/libs-milestone</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>spring-libs-milestone</id>
			<url>https://repo.spring.io/libs-milestone</url>
		</pluginRepository>
	</pluginRepositories>

<!--	<profiles>-->
<!--		<profile>-->
<!--			<id>native</id>-->
<!--			<build>-->
<!--				<plugins>-->
<!--					<plugin>-->
<!--						<groupId>org.graalvm.buildtools</groupId>-->
<!--						<artifactId>native-maven-plugin</artifactId>-->
<!--						<extensions>true</extensions>-->
<!--						<executions>-->
<!--							<execution>-->
<!--								<id>build-native</id>-->
<!--								<phase>package</phase>-->
<!--								<goals>-->
<!--									<goal>build</goal>-->
<!--								</goals>-->
<!--							</execution>-->
<!--						</executions>-->
<!--					</plugin>-->
<!--				</plugins>-->
<!--			</build>-->
<!--			<properties>-->
<!--				<native-buildtools.version>0.9.11</native-buildtools.version>-->
<!--				<repackage.classifier>exec</repackage.classifier>-->
<!--			</properties>-->
<!--			<dependencies>-->
<!--				<dependency>-->
<!--					<groupId>org.junit.platform</groupId>-->
<!--					<artifactId>junit-platform-launcher</artifactId>-->
<!--					<scope>test</scope>-->
<!--				</dependency>-->
<!--			</dependencies>-->
<!--		</profile>-->
<!--	</profiles>-->
</project>
